<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">WanAndroid</string>

    <string name="main_home_title">首页</string>
    <string name="main_project_title">项目</string>
    <string name="main_tree_title">体系</string>
    <string name="main_navi_title">导航</string>
    <string name="main_chapter_title">公众号</string>
    <string name="main_collect_title">收藏</string>
    <string name="main_setting_title">设置</string>
    <string name="main_about_title">关于</string>
    <string name="main_logout_title">退出</string>

    <string name="home_author">作者：%1$s</string>
    <string name="home_time">时间：%1$s</string>

    <string name="loading_msg">加载中...</string>
    <string name="detail_share">分享项目</string>
    <string name="detail_copy_link">复制链接</string>
    <string name="detail_open_browser">浏览器打开</string>
    <string name="detail_select_browser">请选择浏览器：</string>
    <string name="detail_copy_success">已复制到剪切板！</string>
    <string name="detail_select_share">分享到：</string>
    <string name="search_history_record">历史记录</string>
    <string name="search_hot_word">热门搜索</string>
    <string name="search_clear_record">清空记录</string>
    <string name="search_title">搜索</string>
    <string name="search_hint">输入关键词，多个用空格间隔</string>
    <string name="search_key_empty">搜索词不能为空</string>
    <string name="dialog_hit">操作提示</string>
    <string name="dialog_clear_history">你确定要清理全部记录么?</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="login_password_hint">密码</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="register_repassword_hint">确认密码</string>
    <string name="login_username_empty">用户名不能为空!</string>
    <string name="login_password_empty">密码不能为空</string>
    <string name="login_repassword_empty">确认密码不能为空！</string>
    <string name="register_inconsistent_password">前后密码不一致!</string>
    <string name="dialog_register_success">注册成功,现在去登录？</string>
    <string name="not_login">请先登录</string>
    <string name="dialog_login_hint">亲，您尚未登录，现在去登录？</string>
    <string name="dialog_logout_hint">亲，确定要退出登录么？</string>
    <string name="collect_success">收藏成功！</string>
    <string name="uncollect_success">取消收藏成功！</string>
    <string name="main_setting_project">项目源码</string>
    <string name="main_source_title">源码</string>
    <string name="project_explain">项目说明</string>
    <string name="project_explain_detail">本项目是基于鸿样大神的开源 WanAndroid API开发，目的是学习Kotlin,该项目完成了开源API中的绝大部分功能，以后会逐步完善，若有什么问题，欢迎Issue!</string>
    <string name="github_title">本人Github</string>
</resources>
