<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/project_explain"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/project_explain_detail"
        android:textColor="@color/subtextTitleColor"
        android:textSize="@dimen/font_normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/github_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_normal" />

    <TextView
        android:onClick="onGithubClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="https://github.com/StormWyrm"
        android:textColor="@color/subtextTitleColor"
        android:textSize="@dimen/font_normal" />


</LinearLayout>