<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tvSearchResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/rlHot"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvHot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_hot_word"
                    android:textColor="@color/textTitleColor"
                    android:textSize="@dimen/font_small" />


                <com.github.StormWyrm.flowlayout_library.TagFlowLayout
                    android:id="@+id/tflHot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    app:item_margin="15dp"
                    app:line_margin="15dp"
                    />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rlHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tvHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_history_record"
                    android:textColor="@color/textTitleColor"
                    android:textSize="@dimen/font_small" />

                <TextView
                    android:id="@+id/tvClearRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/search_clear_record"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_small" />

                <com.github.StormWyrm.flowlayout_library.TagFlowLayout
                    android:id="@+id/tflHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvHistory"
                    android:layout_marginTop="20dp" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</FrameLayout>